<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp"
    tools:context=".kerucut">

    <TextView
        android:id="@+id/tv_kerucut"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_horizontal"
        android:text="@string/halokerucut"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r"
        />
    <EditText
        android:id="@+id/edt_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s"
        />
    <EditText
        android:id="@+id/edt_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t"
        />
    <EditText
        android:id="@+id/edt_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        />

    <Button android:id="@+id/btnCalculateKerucut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hitungk" />

    <EditText
        android:id="@+id/tv_luasSkerucut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hasilluasSkerucut"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tv_luasPkerucut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hasilluasPkerucut"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tv_volumekerucut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hasilvolumekerucut"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>